add an empty line

--- a/index.html
+++ b/index.html
@@ -19,5 +19,15 @@
   <ul>
     <li>red</li>
   </ul>
+  git init 
+  git status
+  git add file
+  git commit -m 'do something'
+  git log
+  git checkout 'hesh or branch(гілка)'
+  git branch
+  git branch (назва гілки)
+  
+  
 </body>
 </html>
